--- a/packages/@sanity/schema/package.json
+++ b/packages/@sanity/schema/package.json
@@ -16,6 +16,7 @@
     "@types/node": "6.0.52",
     "babel-cli": "^6.24.0",
     "babel-eslint": "^7.2.1",
+    "babel-jest": "^20.0.3",
     "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-syntax-class-properties": "^6.13.0",
     "babel-plugin-syntax-flow": "^6.18.0",
@@ -28,11 +29,17 @@
     "eslint-config-sanity": "^2.1.4",
     "eslint-plugin-import": "^2.2.0",
     "interop-require": "^1.0.0",
+    "jest-cli": "^20.0.4",
     "recursive-readdir": "^2.1.0",
     "rimraf": "^2.6.1"
   },
   "dependencies": {
+    "@sanity/generate-help-url": "^0.106.21",
+    "object-inspect": "^1.2.2",
     "arrify": "^1.0.1",
     "lodash": "^4.17.4"
+  },
+  "jest": {
+    "testMatch": ["**/test/**/*.test.js"]
   }
 }
