[form-builder] Proof of concept - batch image uploads

--- a/packages/@sanity/form-builder/package.json
+++ b/packages/@sanity/form-builder/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sanity/form-builder",
-  "version": "0.108.9",
+  "version": "0.107.25",
   "description": "Sanity form builder",
   "main": "lib/index.js",
   "scripts": {
@@ -20,13 +20,16 @@
   "author": "Sanity.io <hello@sanity.io>",
   "license": "MIT",
   "dependencies": {
-    "@sanity/imagetool": "^0.108.0",
-    "@sanity/mutator": "^0.108.0",
-    "@sanity/observable": "^0.108.0",
-    "@sanity/schema": "^0.108.0",
+    "@sanity/imagetool": "^0.106.21",
+    "@sanity/mutator": "^0.106.21",
+    "@sanity/observable": "^0.106.21",
+    "@sanity/schema": "^0.107.17",
+    "attr-accept": "^1.1.0",
     "cheerio": "^0.22.0",
+    "canvas-to-blob": "^0.0.0",
     "classnames": "^2.2.5",
     "debug": "^2.6.3",
+    "exif-component": "^1.0.1",
     "get-random-values": "^1.2.0",
     "get-window": "^1.1.1",
     "humanize-list": "^1.0.1",
@@ -43,13 +46,13 @@
     "speakingurl": "^13.0.0"
   },
   "devDependencies": {
-    "@sanity/base": "^0.108.7",
-    "@sanity/check": "^0.108.0",
-    "@sanity/cli": "^0.108.0",
-    "@sanity/components": "^0.108.9",
-    "@sanity/core": "^0.108.0",
-    "@sanity/plugin-loader": "^0.108.0",
-    "@sanity/server": "^0.108.0",
+    "@sanity/base": "^0.107.23",
+    "@sanity/check": "^0.107.0",
+    "@sanity/cli": "^0.107.23",
+    "@sanity/components": "^0.107.25",
+    "@sanity/core": "^0.107.23",
+    "@sanity/plugin-loader": "^0.107.0",
+    "@sanity/server": "^0.107.0",
     "babel-cli": "^6.24.0",
     "babel-eslint": "^7.2.1",
     "babel-plugin-css-modules-transform": "^1.1.0",
@@ -83,6 +86,8 @@
     "react-dom": "^15.5.4",
     "react-enroute": "^1.0.0",
     "rimraf": "^2.6.1",
+    "stylelint": "^7.5.0",
+    "stylelint-config-standard": "^14.0.0",
     "tap": "^10.3.0",
     "zen-observable": "^0.4.0"
   },
