--- a/packages/@sanity/components/package.json
+++ b/packages/@sanity/components/package.json
@@ -50,9 +50,10 @@
     "react-dropzone": "^3.9.2",
     "react-element-query": "^3.0.2",
     "react-ink": "^6.1.0",
-    "react-portal": "^3.0.0",
+    "react-portal": "^3.1.0",
     "react-sortable-hoc": "^0.6.3",
     "react-split-pane": "^0.1.63",
+    "resize-end": "^1.1.1",
     "scroll": "^2.0.0"
   },
   "devDependencies": {
