--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "bootstrap": "lerna bootstrap && yarn run package-yarn && yarn run install-husky",
     "build": "lerna run clean && gulp && yarn run package",
     "clean": "lerna run clean && lerna clean",
+    "cypress:open": "cypress open",
     "publish": "yarn run build && lerna publish",
     "publish-canary": "yarn run build && lerna publish --canary --exact",
     "package": "yarn run package-yarn && yarn run package-cli",
@@ -42,6 +43,7 @@
     "babel-register": "^6.26.0",
     "boxen": "^1.1.0",
     "chalk": "^1.1.3",
+    "cypress": "^1.1.4",
     "eslint": "^4.9.0",
     "eslint-config-sanity": "^3.1.0",
     "eslint-plugin-import": "^2.7.0",
@@ -58,6 +60,7 @@
     "husky": "^0.13.4",
     "lerna": "^2.1.0",
     "pre-commit": "^1.2.2",
+    "prettier": "^1.9.1",
     "rimraf": "^2.6.2",
     "semver": "^5.3.0",
     "stylelint": "^8.0.0",
