--- a/packages/@sanity/base/package.json
+++ b/packages/@sanity/base/package.json
@@ -34,7 +34,7 @@
     "@sanity/preview": "0.142.0",
     "@sanity/schema": "0.142.0",
     "@sanity/state-router": "0.142.0",
-    "@sanity/structure": "^0.142.0",
+    "@sanity/structure": "0.142.0",
     "@sanity/transaction-collator": "0.142.0",
     "@sanity/validation": "0.142.0",
     "history": "^4.6.3",
