--- a/packages/@sanity/base/package.json
+++ b/packages/@sanity/base/package.json
@@ -40,6 +40,7 @@
     "history": "^4.6.3",
     "lodash": "^4.17.4",
     "nano-pubsub": "^1.0.2",
+    "oneline": "^1.0.3",
     "promise-props": "^1.0.0",
     "react-fast-compare": "^2.0.2",
     "react-icon-base": "^2.1.2",
