--- a/packages/@sanity/structure/package.json
+++ b/packages/@sanity/structure/package.json
@@ -27,6 +27,7 @@
     "access": "public"
   },
   "dependencies": {
+    "@sanity/base": "^0.140.35",
     "@types/lodash": "^4.14.116",
     "@types/memoize-one": "^3.1.1",
     "@types/node": "^8.0.0",
