--- a/packages/@sanity/base/package.json
+++ b/packages/@sanity/base/package.json
@@ -36,6 +36,7 @@
     "@sanity/state-router": "0.142.0",
     "@sanity/structure": "0.142.0",
     "@sanity/transaction-collator": "0.142.0",
+    "@sanity/util": "0.142.0",
     "@sanity/validation": "0.142.0",
     "history": "^4.6.3",
     "lodash": "^4.17.4",
