--- a/packages/@sanity/base/package.json
+++ b/packages/@sanity/base/package.json
@@ -35,6 +35,7 @@
     "@sanity/schema": "0.142.0",
     "@sanity/state-router": "0.142.0",
     "@sanity/structure": "0.142.0",
+    "@sanity/initial-value-templates": "0.142.0",
     "@sanity/transaction-collator": "0.142.0",
     "@sanity/util": "0.142.0",
     "@sanity/validation": "0.142.0",
